# synth

./: .gitignore  Synth.kicad_sym  eurorack-dimensions.FCStd  pcb-queue.txt
.github/workflows/: Alien Screamer.yaml
3d_models/: CUI_DEVICES_SJ1-3525NG.step
Alien Screamer/Alien Screamer/: Alien Screamer.kicad_pcb  Alien Screamer.kicad_prl  Alien Screamer.kicad_pro  Alien Screamer.kicad_sch  config.kibot.yaml  sym-lib-table
CV-Gate-Expander/CV-Gate-Expander/: CV-Gate-Expander.kicad_pcb  CV-Gate-Expander.kicad_prl  CV-Gate-Expander.kicad_pro  CV-Gate-Expander.kicad_sch  connectors.kicad_sch  gate.kicad_sch  power_and_bypass.kicad_sch
Controller/Controller/: Controller.kicad_pcb  Controller.kicad_prl  Controller.kicad_pro  Controller.kicad_sch  connectors.kicad_sch  constant_current_src.kicad_sch  decoupling.kicad_sch  (+1 more)
LFO/: LFO-bracket.FCStd
Library.pretty/: Battery holder 9v.kicad_mod  Jack_3.5mm_QingPu_WQP-PJ398SM_Vertical_CircularHoles-panel.kicad_mod  Keyboard 5 keys.kicad_mod  Keyboard 7 keys.kicad_mod  MTS-102 panel hole.kicad_mod  Potentiometer_Alpha_RD902F-40-00D_Dual_Vertical.kicad_mod  Potentiometer_Bourns_PTV09A-1_Single_Vertical-panel.kicad_mod  Potentiometer_Bourns_PTV09A-1_Single_Vertical.kicad_mod  R_Axial_DIN0207_L6.3mm_D2.5mm_P7.62mm_Horizontal.kicad_mod  Speaker 2030.kicad_mod  ToggleSwitch_MTS-102_SPDT.kicad_mod  WMF_Logo.kicad_mod  r_potentiometer.kicad_sym  rotary_switch_1P12T.kicad_mod  rotary_switch_3P4T.kicad_mod
Noise Toaster/: Attack Decay Generator.kicad_sch  Audio Amplifier.kicad_sch  LFO.kicad_sch  Noise Toaster.kicad_pcb  Noise Toaster.kicad_prl  Noise Toaster.kicad_pro  Noise Toaster.kicad_sch  Noise.kicad_sch  VCF.kicad_sch  VCO.kicad_sch  vca.kicad_sch
synth-panel/: CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml
synth-panel/src/synth_panel/: __init__.py  ascii_renderer.py  component_factory.py  dsl.py  kicad_project.py  layout.py  pcb_renderer.py  renderer.py  sch_component_factory.py  sch_renderer.py
synth-panel/src/synth_panel/template/blank/: blank.kicad_prl  blank.kicad_pro  blank.kicad_sch
synth-panel/tests/: conftest.py  test_ascii_renderer.py  test_dsl.py  test_layout.py  test_pcb_renderer.py  test_sch_component_factory.py  test_sch_renderer.py  test_update_pcb_workflow.py
utils/: coord.py  jack.py  main.py  panel.py  potentiometer_dial.py  rotary_switch.py
(+118 files in other folders)
