[project]
name = "synth-panel"
version = "0.1.0"
description = "Generate KiCad v9 projects for Eurorack modular synthesizer panels"
authors = [
    {name = "Guillaume Lederrey",email = "guillaume.lederrey@gmail.com"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kicad-sch-api (>=0.5.6,<0.6.0)",
]

[tool.poetry]
packages = [{include = "synth_panel", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.15.10"
pytest = "^9.0.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B", "SIM"]
ignore = ["UP045"]  # prefer Optional[str] over str | None
